<resources>
    <string name="app_name">Ride Ottawa</string>
    <string name="checking_for_updates">Checking for database updates…</string>
    <string name="downloading_new">New version available; downloading…</string>
    <string name="decompressing">Decompressing database…</string>
    <string name="not_downloading_without_wifi">Not checking for new database without wifi.</string>
    <string name="download_failed_but_continuing">Download failed.</string>
    <string name="database_decompression_error">Error decompressing downloaded database.</string>
    <string name="database_update_io_error">I/O error while checking for database update.</string>
    <string name="continuing_with_old_db">%1$s  Using existing database.  (Exception: %2$s, HTTP code: %3$s)</string>
    <string name="db_already_up_to_date">Database already the latest version.</string>
    <string name="no_exception">None</string>
    <string name="no_code">None</string>
    <string name="no_database_fatal_error">%1$s  Cannot continue without database.  (Exception: %2$s, HTTP code: %3$s)</string>
    <string name="cannot_proceed_without_database">Cannot proceed without database.</string>
    <string name="database_check_message">Last database update check was %1$s.\nCurrent database is valid until %2$s.</string>
    <string name="no_database_yet">You have not yet downloaded a database.</string>
    <string name="force_database_update">Force update check</string>
    <string name="close_app">Close</string>
    <string name="close_dialog">Close</string>
    <string name="try_again_without_wifi">Download now\nanyway (27MB)</string>
    <string name="action_settings">Settings</string>
    <string name="action_database">Database&#8230;</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_set_alarm">Set alarm</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_edit_favourite">Edit Favourite</string>
    <string name="delete_favourite">Delete favourite</string>
    <string name="name_label">Name:</string>
    <string name="save">Save</string>
    <string name="add_stop">Add stop</string>
    <string name="choose_routes">Routes</string>
    <string name="add_destination">Add destination</string>
    <string name="select_all">Select all</string>
    <string name="no_routes_available">This stop has no routes.</string>
    <string name="duplicate_stop_message">This favourite already contains that stop.</string>
    <string name="not_saving_empty_favourite">Not saving a Favourite with neither name nor stops.</string>
    <string name="filter_hint">Type here to filter stops</string>
    <string name="location_permission_denied_response">To avoid location permission requests, change your settings.</string>
    <string name="title_activity_select_stop">Select Stop</string>
    <string name="title_activity_select_destination">Select Destination</string>
    <string name="title_activity_select_routes">Select Routes</string>
    <string name="title_activity_view_favourite">View Favourite</string>
    <string name="to_destination">to %1$s</string>
    <string name="ellipsis">&#8230;</string>
    <string name="minutes_format">%1$dm</string>
    <string name="scheduled_abbrev">Sched</string>
    <string name="last_stop_abbrev">Last</string>
    <string name="gps_abbrev">GPS</string>
    <string name="gps_old_abbrev">GPS?</string>
    <string name="waiting_for_data_abbrev">&#8230;</string>
    <string name="skipping_refresh_too_soon">Refreshed too recently.</string>
    <string name="api_error">API error; GPS data unavailable.</string>
    <string name="title_set_alarm_dialog">Set alarm for trip</string>
    <string name="choose_minutes_warning">Minutes of warning:</string>
    <string name="example_stop_code">8888</string>
    <string name="example_route_name">999</string>
    <string name="example_arrival_time">12:00</string>
    <string name="example_head_sign">Bus to Somewhere</string>
    <string name="example_minutes">999m</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_alarms">Alarms</string>
    <string name="title_activity_list_alarms">Alarms</string>
    <string name="no_alarms">You have no alarms set.</string>
    <string name="alarm_channel_name">Bus proximity alarms</string>
    <string name="alarm_channel_description">Notifications used for alarms you choose to set for specific approaching buses.</string>
    <string name="pending_alarm_channel_name">Pending bus proximity alarms</string>
    <string name="pending_alarm_channel_description">Notifications indicating that you have set an alarm for a specific approaching bus.</string>
    <string name="some_routes_missing">Some stops or routes for this favourite no longer exist and have been removed.</string>

    <string name="alarm_notification_text">Time to go!  %1$s departs %2$s at %3$s</string>
    <string name="pending_alarm_notification_text">%1$s departs %2$s at %3$s</string>
    <string name="alarm_notification_title">The %1$s is %2$s away</string>
    <plurals name="minute_plural">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="alarm_at">Alarm at</string>
    <string name="no_alarm_notification_title">Checking for alarms&#8230;</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_download_wifi_only">Download databases on WiFi only</string>
    <string name="pref_description_download_wifi_only">Will only check for or download updates to the
        transit information database when connected to WiFi.
    </string>

    <string name="pref_title_sort_stops_by">Sort stops by&#8230;</string>
    <string name="pref_description_sort_stops_by">When selecting a stop, how should the stops be
        sorted?
    </string>
    <string name="pref_default_sort_stops_by">proximity</string>

    <string name="pref_title_what_destination">What to display as trip destinations</string>
    <string name="pref_description_what_destination">What should be displayed for trip destinations?
    </string>
    <string name="pref_default_what_destination">chosen</string>

    <string name="pref_title_title_case_stops">Convert stop names to title case</string>
    <string name="pref_description_title_case_stops">OCTranspo provides the stop names in
        ALL CAPS.  This option converts them to Title Case.
    </string>

    <string name="pref_title_small_favourites">Use small font for favourite list</string>
    <string name="pref_description_small_favourites">Use a smaller font for the main list of
        favourites.  This allows you to see more at once, but might make them harder to
        accurately tap.
    </string>


    <!-- Strings related to Documentation -->
    <string name="about_dialog_message">Ride Ottawa version %1$s

    \n\nThis program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    \n\nSource is hosted at %2$s where bug reports and
    pull requests are welcome.

    \n\nSome icons derived from Material icons available from design.google.com/icons</string>
    <string name="go_to_source">Go to source</string>
    <string name="source_url">https://github.com/jbytheway/ride-ottawa</string>

    <string name="no_favourites_hint">You currently have no favourites.\nTap the \'+\' button
    below to create one.</string>
    <string name="add_favourite">Add favourite</string>

    <string name="list_favourites_hint">Tap a favourite to use it.\nLong tap to edit.</string>

    <string name="edit_favourite_hint">Add stops with the button above.\nFor each, either add
        individual routes, or all routes to a destination.</string>

    <string name="view_favourite_help">Here you can see forthcoming trips for this
    favourite.  Each trip shows:\n- The stop it departs from\n- The destination\n- The scheduled
    time of departure\n- The number of minutes until departure.\n- The estimated time of departure,
    when GPS data is available.\n\nThe short string
    above the number of minutes can be\n‘Sched’ if the time is taken from the schedule,\n‘Last’ if
    this is the last stop for the route, and thus you cannot board the bus here,\n‘GPS’ if the time
    is an estimate based a GPS reading,\n‘GPS?’ if there was a GPS reading, but it is more than
    a minute old, which is suspicious, and might indicate that the estimate is no longer
    good, or \n‘&#8230;’ when waiting for GPS data from the OCTranspo API (or in the event of an
    error accessing the API).
    \n\nTap a trip to set an alarm for it.</string>
</resources>
