<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_download_wifi_only"
        android:title="@string/pref_title_download_wifi_only"
        android:summary="@string/pref_description_download_wifi_only"
        android:defaultValue="true" />

    <ListPreference
        android:key="pref_sort_stops_by"
        android:title="@string/pref_title_sort_stops_by"
        android:dialogTitle="@string/pref_description_sort_stops_by"
        android:entries="@array/pref_sort_stop_by_entries"
        android:entryValues="@array/pref_sort_stop_by_values"
        android:defaultValue="@string/pref_default_sort_stops_by" />

    <CheckBoxPreference
        android:key="pref_show_headsigns"
        android:title="@string/pref_title_show_headsigns"
        android:summary="@string/pref_description_show_headsigns"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_title_case_stops"
        android:title="@string/pref_title_title_case_stops"
        android:summary="@string/pref_description_title_case_stops"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="pref_small_favourites"
        android:title="@string/pref_title_small_favourites"
        android:summary="@string/pref_description_small_favourites"
        android:defaultValue="false" />

</PreferenceScreen>
