<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">

    <include android:id="@+id/view_favourite_part" layout="@layout/view_favourite_list_item" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/action_delete"
            android:id="@+id/delete_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alarm_at"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginEnd="5sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-5sp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/example_arrival_time"
            android:id="@+id/alarm_time"
            android:gravity="end" />

        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/example_minutes"
            android:id="@+id/alarm_minutes_away"
            android:gravity="end" />
    </LinearLayout>
</LinearLayout>