<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/example_stop_code"
        android:id="@+id/stop_code"
        android:textAlignment="textEnd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/stop_name"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/stop_code"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/route_name"
        android:textAlignment="textEnd"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/stop_code"
        android:text="@string/example_route_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/example_head_sign"
        android:id="@+id/head_sign"
        android:layout_alignTop="@+id/route_name"
        android:layout_toEndOf="@+id/route_name"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/example_arrival_time"
        android:id="@+id/arrival_time"
        android:layout_alignTop="@+id/head_sign"
        android:layout_toEndOf="@+id/head_sign"
        android:layout_marginStart="10dp" />
</RelativeLayout>
