<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.EditFavouriteActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout"
            android:focusableInTouchMode="true">
            <!-- Above focusable property is a hack to prevent the keyboard appearing -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name_label"
                android:id="@+id/name_label"
                android:layout_centerVertical="true"
                android:labelFor="@+id/name" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_alignTop="@+id/name_label"
                android:layout_toEndOf="@+id/name_label"
                android:inputType="textCapSentences|text"
                android:importantForAutofill="no" />
        </RelativeLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/stop_list"
            android:layout_below="@+id/relativeLayout"
            android:layout_above="@+id/button_holder" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/hint_area"
            android:id="@+id/button_holder"
            style="?android:attr/buttonBarStyle"
            android:elevation="@dimen/button_bar_elevation"
            android:background="@color/colorMildAccent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stop"
                android:id="@+id/add_stop"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/hint_area">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/edit_favourite_hint"
                android:id="@+id/hint_text"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_close_clear_cancel"
                android:id="@+id/close_hint_button"
                android:contentDescription="@string/close_dialog" />

        </LinearLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>