<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.EditFavouriteActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout"
            android:focusableInTouchMode="true">
            <!-- Above focusable property is a hack to prevent the keyboard appearing -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name_label"
                android:id="@+id/name_label"
                android:layout_centerVertical="true"
                android:labelFor="@id/name" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_alignTop="@+id/name_label"
                android:layout_toEndOf="@+id/name_label"
                android:inputType="text" />
        </RelativeLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/stop_list"
            android:layout_below="@+id/relativeLayout"
            android:layout_above="@+id/save" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_stop"
            android:id="@+id/add_stop"
            android:layout_alignBottom="@+id/save"
            android:layout_toEndOf="@+id/save" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>